# betterSockets

./: CMakeLists.txt  README.md
include/betterSocket/: share.h  socket.h
include/betterSocket/backend/: linux_socket.h
src/: socket.cpp
src/backend/: linux_socket.cpp
test/get_request/: CMakeLists.txt
test/get_request/src/: main.cpp
test/server/: CMakeLists.txt
test/server/src/: main.cpp
